# Imagine2022-Ingestion

./: .gitignore  Cargo.toml  Dockerfile  NodePort.yml  README.md  template.env
HACKING/: build.sh  run_ingestion.sh
scripts/: build.sh  run_ingestion.sh  run_mongo.sh
src/: main.rs
