[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.15.0", features = ["full"] }
ctrlc = "3.2.1"
